fix: vocab form pushing out of screen

--- a/src/Forms/VocabForm/VocabForm.scss
+++ b/src/Forms/VocabForm/VocabForm.scss
@@ -4,12 +4,9 @@
 .vocab-form {
   width: 100%;
   height: 75%;
-  display: flex;
-  flex-direction: column;
   grid-area: main;
   padding: 50px;
   max-width: 700px;
-  justify-content: center;
   margin: 0 auto;
 
   .heading {
